# FavoritesBar

./: CMakeLists.txt  Favorites.cpp  Favorites_res.rc  resource.h
